--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 GUI:
+- Renaming existing rangevars
+- Unused range alert
 
-- metrics dropdown list
-- move plottypes to plots
-
+Viewer:
 - performance numbers in info
 
 - barplots
