--- a/TODO
+++ b/TODO
@@ -4,10 +4,10 @@ Sampler:
 - Test on cluster
 
 GUI:
-- Renaming existing rangevars
+x Renaming existing rangevars
 - Unused range alert
-- variable into scalar fields
-- update visualization after range changes
+x variable into scalar fields
+x update visualization after range changes
 
 - min(a,b) for symbolic
 
@@ -16,11 +16,11 @@ Viewer:
 
 - memory metrics
 
--typo "system"
+- typo "system"
 
--text to be made "selectable"
+x text to be made "selectable"
 
--color change still broken
+- color change still broken
 
 
 TOOL (MS thesis) - identification of processor's parameters.
