--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@ Sampler:
 - Automatic hardware analysis (cfg generation)
 
 GUI:
-- sum range
+- symbols in sumrange
 - work variables
 - "file" backend
 
