--- a/TODO
+++ b/TODO
@@ -1,10 +1,12 @@
 Sampler:
+- Carry OPENP_ENABLED in info.py
 - README
 
 
 GUI:
 - complex vary
 - work variables
+- omp option and range enabled depending on sampler
 - README
 
 - (dynamically load signatures => flatten signature folder)
