--- a/TODO
+++ b/TODO
@@ -4,8 +4,10 @@ Sampler:
 
 
 GUI:
+- Report range (Samplers, #threads)
 - Example GUI states
 - save state on ctrl-C
+- hide "along" for vectors
 - work variable hiding
 - work variable dimension deduction
 
